--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 html, body{
-    background-color: #845ec2;
+    background-color: #f5e3ff;
+    color: black;
 
 }
 /* Main content */
     .main{
-        height: 860px;
+        height: 106vh;
         display:flex;
         flex-direction: row;
         align-items: center;
@@ -16,7 +17,7 @@ html, body{
 
         /* TopLeft | TopRight | BottomLeft | BottomRight */
         border-radius: 0px 0px 48px 48px;
-        box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
     }
 
     /*Personal Pic*/
@@ -75,17 +76,15 @@ html, body{
 
     }
         .e1{
-            background-color: #6c3fb6;
 
             border-radius: 24px;
             height: 350px;
             width: 500px;
             margin-right: 50px;
 
-            color: #c9c8ca;
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
 
             h5{
                 line-height: 10px;
@@ -110,16 +109,14 @@ html, body{
 
         }
         .e2{
-            background-color: #6c3fb6;
 
             border-radius: 24px;
             height: 350px;
             width: 500px;
-            color: #c9c8ca;
 
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
 
 
             h5{
@@ -138,17 +135,15 @@ html, body{
         flex-direction: row;
 
         div{
-            background-color: #6c3fb6;
             
             border-radius: 24px;
             height: 350px;
             width: 500px;
             margin-right: 50px;
 
-            color: #c9c8ca;
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
 
 
             ul{
@@ -165,47 +160,45 @@ html, body{
         flex-direction: row;
 
         div{
-            background-color: #6c3fb6;
             
             border-radius: 24px;
             height: 350px;
             width: 500px;
             margin-right: 50px;
 
-            color: #c9c8ca;
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
 
 
         }
 
     }
 
-        #portfolio button {
-            background-color: #845ec2;
-            display: flex;
-            overflow: hidden;
-            margin-left: 1350px;
-            user-select: none;
-            text-align: center;
-            border: 0px none;
-            border-radius: 36px;
-            padding: 5px 10px 5px 10px;
+    #portfolio button {
+        display: flex;
+        overflow: hidden;
+        /* top | right | bottom | left */
+        margin: 2vw 0vw 0vw 95vw;
+        user-select: none;
+        text-align: center;
+        border: 0px none;
+        border-radius: 36px;
+        padding: 5px 10px 5px 10px;
 
-            a{
-                color: #fcf7ff;
-            }
-
-            &:hover{
-                background-color: #4810a4;
-            }
+        a{
+            color: black;
         }
 
-        .seeMore{
-
-            cursor: pointer;
-            text-decoration: none;
-            font-weight: 700;
-
+        &:hover{
+            background-color: #4810a4;
         }
+    }
+
+    .seeMore{
+
+        cursor: pointer;
+        text-decoration: none;
+        font-weight: 700;
+
+    }
