--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 html, body{
-    background-color: #f5e3ff;
+    /*background-color: #f5e3ff;*/
     color: black;
 
 }
 /* Main content */
     .main{
-        height: 106vh;
+       /* height: 106vh;*/
+       height: 75vh;
         display:flex;
         flex-direction: row;
         align-items: center;
@@ -16,22 +17,23 @@ html, body{
         background-color: #fcf7ff;
 
         /* TopLeft | TopRight | BottomLeft | BottomRight */
-        border-radius: 0px 0px 48px 48px;
-        box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
+       /* border-radius: 0px 0px 48px 48px;
+        box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);*/
     }
 
-    /*Personal Pic*/
+    /*Personal Pic
     .myPic{
-        /*Original Size: 2394x3412 */
+        //Original Size: 2394x3412
         width: 399px;
         height: 568px;
         margin-right: 100px;
         border-radius: 16px;
-    }
+    }*/
 
     .intro{
         height: 500px;
-        width: 650px;
+       /* width: 650px;*/
+        width: 1000px;
         margin-left: 100px;
         text-align: center;
     }
@@ -51,14 +53,27 @@ html, body{
 }
     .body h1{
         color: black;
-        padding-right: 50px;
         font-weight: 500;
+    }
+
+    #about{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 60%;
+
+        h1{
+            padding-bottom: 50px;
+        }
     }
     /*Education*/
     #education{
         margin: 70px 50px 70px 50px;
         display:flex;
-        flex-direction: row;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+
 
         p{
             line-height: 23px;
@@ -80,31 +95,13 @@ html, body{
             border-radius: 24px;
             height: 350px;
             width: 500px;
-            margin-right: 50px;
 
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
 
             h5{
                 line-height: 10px;
                 margin-bottom: 20px;
-            }
-
-
-            ul{
-                margin-top: 20px;
-                margin-left: 10px;
-                list-style-type: none;
-                line-height: 23px;
-
-                p{
-                    font-size: 15px;
-                }
-
-                li{
-                    font-size: 13px;
-                }
             }
 
         }
@@ -116,8 +113,6 @@ html, body{
 
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
-
 
             h5{
                 line-height: 10px;
@@ -132,23 +127,35 @@ html, body{
     #skill{
         margin: 70px 50px 70px 50px;
         display:flex;
-        flex-direction: row;
+        flex-direction: column;
+        width: 50%;
+        align-items: center;
+
 
         div{
             
-            border-radius: 24px;
-            height: 350px;
+            padding-bottom: 80px;
             width: 500px;
-            margin-right: 50px;
-
             text-align: center;
             line-height: 40px;
-            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.3);
+
+            h2{
+                padding-bottom: 15px;
+            }
 
 
             ul{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
                 list-style-type: none;
                 line-height: 30px;
+
+                li{
+                    /* top | right | bottom | left */
+                    padding: 5px 40px 5px 10px;
+                }
+
             }
 
         }
