--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Nanum Gothic", sans-serif;
+  font-weight: 600;
+  line-height: 30px;
 }
 
 html, body{
@@ -47,7 +49,7 @@ html, body{
 .main{
   /* height: 106vh;*/
   padding-top: 200px;
-  height: 75vh;
+  height: 94vh;
    display:flex;
    flex-direction: row;
    align-items: center;
@@ -77,3 +79,7 @@ html, body{
        font-weight: 700;
        line-height: 50px;
    }
+
+.text-indent{
+    text-indent: 50px;
+}
